<resources>
    <string name="app_name">My APP</string>

    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="train">train</string>
    <string name="save">save</string>
    <string name="delete">delete file</string>

    <string name="x">X = </string>
    <string name="y">Y = </string>
    <string name="z">Z = </string>

    <string name="standing">Standing</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="others">Others</string>
    <string name="summary">Summary</string>
    <string name="reset">Reset</string>

    <string name="distribution">=== Distribution ===</string>
    <string name="history">=== History ===</string>
    <string name="time">Time</string>
    <string name="activity">Activity</string>
    <string name="three_pts">...</string>

    <string name="collect_data">Collect data</string>
    <string name="train_model">Train model</string>
    <string name="classify_instances">Classify instances</string>
    <string name="show_history">show history</string>

    <string name="predict_activity">Click start to predict activity</string>
</resources>