<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btn_collector"
        style="@style/btn_primary"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:text="@string/collect_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_train_model"
        style="@style/btn_secondary"
        android:layout_width="300dp"
        android:text="@string/train_model"
        app:layout_constraintEnd_toEndOf="@+id/btn_collector"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_collector"
        app:layout_constraintTop_toBottomOf="@+id/btn_collector" />

    <Button
        android:id="@+id/btn_classifier"
        style="@style/btn_danger"
        android:layout_width="0dp"
        android:text="@string/classify_instances"
        app:layout_constraintEnd_toEndOf="@+id/btn_train_model"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_train_model"
        app:layout_constraintTop_toBottomOf="@+id/btn_train_model" />

    <Button
        android:id="@+id/btn_history"
        style="@style/btn_teal"
        android:layout_width="0dp"
        android:text="@string/show_history"
        app:layout_constraintEnd_toEndOf="@+id/btn_classifier"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_classifier"
        app:layout_constraintTop_toBottomOf="@+id/btn_classifier" />

</androidx.constraintlayout.widget.ConstraintLayout>